# cmd2-ansi

./: .gitignore  .prettierignore  GEMINI.md  LICENSE  MANIFEST.in  Makefile  README.md  pyproject.toml  ruff.toml
.github/workflows/: quality.yml  tests.yml  typecheck.yml
cmd2_ansi/: __init__.py  ansi.py
examples/: colors.py
tests/: test_ansi.py
