[build-system]
requires = ["build>=1.2.1", "setuptools>=64"]
build-backend = "setuptools.build_meta"

[project]
name = "cmd2_ansi"
description = "Backport of cmd2.ansi module from cmd2 2.7.0 to ease migration to cmd2 3.x"
version = "1.0.0"
authors = [{ name = "cmd2 Contributors" }]
readme = "README.md"
requires-python = ">=3.10"
keywords = ["ansi", "cmd2", "Python"]
license = "MIT"
license-files = ["LICENSE"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Environment :: Console",
    "Operating System :: OS Independent",
    "Intended Audience :: Developers",
    "Intended Audience :: System Administrators",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Programming Language :: Python :: Free Threading :: 3 - Stable",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = ["wcwidth>=0.2.10"]

[dependency-groups]
build = ["build>=1.2.1", "setuptools>=64", "setuptools-scm>=8"]
dev = [
    "ipython>=8",
    "mypy>=1.12",
    "pre-commit>=2.20.0",
    "pytest>=7",
    "pytest-cov>=4.0.0",
    "pytest-mock>=3.14",
    "ruff>=0.13",
    "twine>=6",
]
quality = ["pre-commit>=2.20.0"]
test = ["coverage>=7", "pytest>=7", "pytest-cov>=4", "pytest-mock>=3.14"]
validate = ["mypy>=1.12", "ruff>=0.13", "types-setuptools>=69"]

[tool.mypy]
disallow_incomplete_defs = true
disallow_untyped_calls = true
disallow_untyped_defs = true
exclude = [
    "^.git/",
    "^.venv/",
    "^build/",        # .build directory
    "^docs/",         # docs directory
    "^dist/",
    "^examples/",     # examples directory
    "^noxfile\\.py$", # nox config file
    "setup\\.py$",    # any files named setup.py
    "^site/",
    "^tasks\\.py$",   # tasks.py invoke config file
    "^tests/",        # tests directory
]
files = ['.']
show_column_numbers = true
show_error_codes = true
show_error_context = true
strict = true
warn_redundant_casts = true
warn_return_any = true
warn_unreachable = true
warn_unused_ignores = false

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.setuptools]
packages = ["cmd2_ansi"]

[tool.uv]
default-groups = ["build", "dev"]
